--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="title">Playlist maker</string>
+    <string name="btn_search">Поиск</string>
+    <string name="btn_library">Медиатека</string>
+    <string name="btn_setting">Настройки</string>
 </resources>
