--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="title">Playlist maker</string>
+    <string name="btn_search">Поиск</string>
+    <string name="btn_library">Медиатека</string>
+    <string name="btn_setting">Настройки</string>
+    <string name="setting_theme">Темная тема</string>
+    <string name="setting_support">Написать в поддержку</string>
+    <string name="setting_shared">Поделиться приложением</string>
+    <string name="setting_agreement">Пользовательское соглашение</string>
+
+    <string name="shared_text">https://practicum.yandex.ru/android-developer/</string>
+    <string name="shared_title">Share APK</string>
+    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="support_email">alprem2016@yandex.ru</string>
+    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
+
 </resources>
