--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,8 @@
     <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="support_email">alprem2016@yandex.ru</string>
     <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="track_not_found">Ничего не нашлось</string>
+    <string name="no_connect">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="refresh">Обновить</string>
 
 </resources>
