--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,10 @@
     <string name="genre_audio_player">Жанр</string>
     <string name="country_audio_player">Страна</string>
     <string name="null_timer">00:00</string>
+    <string name="library_playlist">Плейлисты</string>
+    <string name="library_favorites">Избранные треки</string>
+    <string name="playlist_not_created">Вы не создали\nни одного плейлиста</string>
+    <string name="favorites_null">Ваша медиатека пуста</string>
+    <string name="playlist_created">Новый плейлист</string>
 
 </resources>
