--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="btn_search">Поиск</string>
     <string name="btn_library">Медиатека</string>
     <string name="btn_setting">Настройки</string>
+    <string name="btn_playlist_add">Новый плейлист</string>
     <string name="setting_theme">Темная тема</string>
     <string name="setting_support">Написать в поддержку</string>
     <string name="setting_shared">Поделиться приложением</string>
@@ -21,6 +22,7 @@
     <string name="clear_history_search">Очистить историю</string>
     <string name="title_history_search">Вы искали</string>
     <string name="content_description_audio_player">Обложка альбома</string>
+    <string name="content_description_playlist">Обложка плейлиста</string>
     <string name="duration_audio_player">Длительность</string>
     <string name="album_audio_player">Альбом</string>
     <string name="year_audio_player">Год</string>
@@ -32,5 +34,8 @@
     <string name="playlist_not_created">Вы не создали\nни одного плейлиста</string>
     <string name="favorites_null">Ваша медиатека пуста</string>
     <string name="playlist_created">Новый плейлист</string>
+    <string name="playlist_name">Название*</string>
+    <string name="playlist_description">Описание</string>
+    <string name="playlist_btn_add">Создать</string>
 
 </resources>
