--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="playlist_name">Название*</string>
     <string name="playlist_description">Описание</string>
     <string name="playlist_btn_add">Создать</string>
+    <string name="title_add_to_playlist">Добавить в плейлист</string>
 
 </resources>
