--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="playlist_description">Описание</string>
     <string name="playlist_btn_add">Создать</string>
     <string name="title_add_to_playlist">Добавить в плейлист</string>
+    <string name="track_added">Добавлено в плейлист</string>
+    <string name="track_is_exists">Трек уже добавлен в плейлист</string>
 
 </resources>
