--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,9 @@
     <string name="title_add_to_playlist">Добавить в плейлист</string>
     <string name="track_added">Добавлено в плейлист</string>
     <string name="track_is_exists">Трек уже добавлен в плейлист</string>
+    <string name="cansel">Отменить</string>
+    <string name="ending">Завершить</string>
+    <string name="end_add_playlist">Завершить создание плейлиста?</string>
+
 
 </resources>
