--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,10 @@
         <item quantity="few">%d трека</item>
         <item quantity="many">%d треков</item>
     </plurals>
+
+    <plurals name="time_count">
+        <item quantity="one">%d минута</item>
+        <item quantity="few">%d минуты</item>
+        <item quantity="many">%d минут</item>
+    </plurals>
 </resources>
