--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="cansel">Отменить</string>
     <string name="ending">Завершить</string>
     <string name="end_add_playlist">Завершить создание плейлиста?</string>
+    <string name="delete_track_dialog">Хотите удалить трек?</string>
+    <string name="yes">ДА</string>
+    <string name="no">НЕТ</string>
 
 
     <plurals name="tracks_count">
